Correction : image overflow in view page

--- a/src/components/viewComponent/index.css
+++ b/src/components/viewComponent/index.css
@@ -5,6 +5,7 @@
 }
 .viewParentDiv .imageShowDiv {
   padding: 16px;
+  min-width: 70%;
   max-width: 70vw;
 }
 
